syntax = "proto3";

package rpc;

message RpcRequest {
  string interface_name = 1;
  string method_name = 2;
  repeated bytes params = 3;
}

message RpcResponse {
  int32 code = 1;
  bytes data = 2;
  string msg = 3;
}
